[package]
name = "h-rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
once_cell = "1.20.2"
opentelemetry = "0.26.0"
opentelemetry-http = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# rocksdb = "0.22.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"

[dependencies.rocksdb]
version = "0.22.0"
default-features = false
features = ["lz4"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
