[package]
name = "h-rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "http-proto"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-http = "0.30.0"
opentelemetry-stdout = "0.30.0"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# rocksdb = "0.22.0"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.rocksdb]
version = "0.22.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.40.0", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
hyper = "1.4"
urlencoding = "2.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
